--- a/vois/vuetify/pageTest.ipynb
+++ b/vois/vuetify/pageTest.ipynb
@@ -3,13 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "073219f6",
+   "id": "e3a93bd9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "932aa5236ca94a9abcac88f2de84a479",
+       "model_id": "0e5e5eeacbe447f4980fcbfbbff38d16",
        "version_major": 2,
        "version_minor": 0
       },
@@ -34,7 +34,7 @@
     "\n",
     "p = page('Application XYZ', 'Map page', output,\n",
     "         titlecolor='#008800', titledark=True, footercolor='#cccccc', footerdark=False,\n",
-    "         logoappurl='https://jeodpp.jrc.ec.europa.eu/services/shared/pngs/BDAP_Logo1024transparent.png', logowidth=100,\n",
+    "         logoappurl='https://jeodpp.jrc.ec.europa.eu/services/shared/pngs/BDAP_Logo1024transparent.png', #logowidth=50,\n",
     "         on_logoapp=on_click, copyrighttext='European Commission - Joint Research Centre',\n",
     "         show_back=True, show_help=True, on_help=on_click, show_credits=True, on_credits=on_click)\n",
     "card = p.create()\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbf17932",
+   "id": "5f29a08a",
    "metadata": {},
    "outputs": [],
    "source": []
