Added indeterminate parameter to dialogWait

--- a/vois/vuetify/dialogWaitTest.ipynb
+++ b/vois/vuetify/dialogWaitTest.ipynb
@@ -2,25 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "cd719368",
+   "execution_count": null,
+   "id": "94cb66bb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "924be865360247dc9d10acb15609bcb6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run dialogWait.py\n",
     "\n",
@@ -35,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "dab70a62",
+   "execution_count": null,
+   "id": "f261c617",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +31,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba0a9683",
+   "id": "1442f392",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example of linear value setting\n",
+    "import time\n",
+    "dlg = dialogWait(text='Please wait for processing to terminate...', indeterminate=False, output=out)\n",
+    "\n",
+    "for i in range(101):\n",
+    "    dlg.value = i\n",
+    "    time.sleep(0.02)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "446b4ae1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dlg.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d15481ea",
    "metadata": {},
    "outputs": [],
    "source": []
