Added other parameters to dialogWait

--- a/vois/vuetify/dialogWaitTest.ipynb
+++ b/vois/vuetify/dialogWaitTest.ipynb
@@ -3,9 +3,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94cb66bb",
+   "id": "c5546e0a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "68fca6a686da44bbb96dd1280760876d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run dialogWait.py\n",
     "\n",
@@ -15,13 +30,13 @@
     "out = widgets.Output()\n",
     "display(out)\n",
     "\n",
-    "dlg = dialogWait(text='Please wait for processing to terminate...', output=out)"
+    "dlg = dialogWait(text='Please wait for processing to terminate...', height=4, output=out)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f261c617",
+   "id": "7d0cfd9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,24 +45,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1442f392",
+   "execution_count": 56,
+   "id": "3de931dc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Example of linear value setting\n",
+    "%run dialogWait.py\n",
+    "\n",
     "import time\n",
-    "dlg = dialogWait(text='Please wait for processing to terminate...', indeterminate=False, output=out)\n",
+    "dlg = dialogWait(text='Please wait for processing to terminate...', indeterminate=False, linecolor='blue', showtext=True, textcolor='white', height=20, output=out)\n",
     "\n",
     "for i in range(101):\n",
     "    dlg.value = i\n",
-    "    time.sleep(0.02)"
+    "    time.sleep(0.001)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "446b4ae1",
+   "id": "6510eea4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d15481ea",
+   "id": "b29dbd93",
    "metadata": {},
    "outputs": [],
    "source": []
