Added flag to palettePickerEx

--- a/vois/vuetify/appExample3.ipynb
+++ b/vois/vuetify/appExample3.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5121632d",
+   "execution_count": 1,
+   "id": "d5270308",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "90b4a28d",
+   "execution_count": 2,
+   "id": "df51bf6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,10 +152,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "29ce080f",
+   "execution_count": 3,
+   "id": "2991eedc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6c6fed0f134247efb9e6adaeddbd4d61",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dialog(children=[Card(children=[Output(layout=Layout(height='100vh', width='100vw'))], layout=None)], fullscre…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Click on the credits text\n",
     "def on_click_credits():\n",
@@ -491,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e58c492f",
+   "id": "47495d03",
    "metadata": {},
    "outputs": [],
    "source": []
