--- a/vois/vuetify/palettePickerExTest.ipynb
+++ b/vois/vuetify/palettePickerExTest.ipynb
@@ -2,39 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "3bf52c77",
+   "execution_count": null,
+   "id": "7f2d15c7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1dd41290f53d4232a1bff52df0fb7a54",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43f40fb331f242d4be7478e5b2de7a54",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(Html(children=[Select(background_color='white', chips=False, class_='pa-0 mx-0 m…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run palettePickerEx.py\n",
     "\n",
@@ -47,14 +18,14 @@
     "    with output:\n",
     "        print(colors,interpolate)\n",
     "\n",
-    "p = palettePickerEx(width=250, onchange=onchange)\n",
+    "p = palettePickerEx(width=250, value='Turbo', interpolate=False, show_interpolate_switch=False, onchange=onchange)\n",
     "p.draw()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1063ef48",
+   "id": "108b2d20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99715efe",
+   "id": "cf66416b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101a4ebb",
+   "id": "08104c79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97683dba",
+   "id": "826d2ae7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -93,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93681c68",
+   "id": "4e99a9ec",
    "metadata": {},
    "outputs": [],
    "source": []
