--- a/vois/vuetify/rangeSliderFloatTest.ipynb
+++ b/vois/vuetify/rangeSliderFloatTest.ipynb
@@ -2,10 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b78b1968",
+   "execution_count": 4,
+   "id": "c9e1e9b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a40a5005835e4539935483c2f8402394",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Row(children=[Html(children=[''], class_='pa-0 ma-0 mt-4', layout=None, style_='', tag='div'), Html(children=[…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5cd3114081e44bb482188e41d5335b99",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
@@ -19,15 +48,154 @@
     "        print(value)\n",
     "\n",
     "s = rangeSliderFloat(1.8, 2.5, text='Select pressure level:', minvalue=1.0, maxvalue=3.0, showpercentage=False, decimals=3,\n",
-    "                     resetbutton=True, showtooltip=True, onchange=onchange)\n",
+    "                     resetbutton=False, showtooltip=True, onchange=onchange)\n",
     "display(s.draw())\n",
     "display(output)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "0d250e2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9d5e491a647d4542973eec6ef0daddfb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Row(children=[Html(children=[''], class_='pa-0 ma-0 mt-4', layout=None, style_='', tag='div'), Html(children=[…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4c4fc527fd7946879bc735031526f30f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from ipywidgets import widgets\n",
+    "from IPython.display import display\n",
+    "\n",
+    "%run rangeSliderFloat.py\n",
+    "\n",
+    "output = widgets.Output()\n",
+    "\n",
+    "def onchange(value):\n",
+    "    with output:\n",
+    "        print(value)\n",
+    "\n",
+    "s = rangeSliderFloat(1.8, 2.5, text='', minvalue=1.0, maxvalue=3.0, showpercentage=False, decimals=3,\n",
+    "                     resetbutton=False, showtooltip=True, onchange=onchange)\n",
+    "display(s.draw())\n",
+    "display(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "8fbdb684",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update the minvalue and maxvalue!\n",
+    "v = s.value\n",
+    "s.minvalue = 2\n",
+    "s.maxvalue = 4\n",
+    "s.onsliderchange()\n",
+    "intvaluemin = s.float2integer(v[0])\n",
+    "intvaluemax = s.float2integer(v[1])\n",
+    "s.slider.v_model = [intvaluemin,intvaluemax]\n",
+    "s.oninput()\n",
+    "#s.slider.v_model = \n",
+    "#s.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "5e05ea58",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 62]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.slider.v_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "5f217039",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2.0, 2.498]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.value"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "429ad8c6",
+   "id": "bacba49d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1b6e757",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ef82fb7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2784db2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6a011bc",
+   "id": "d58e59ff",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -45,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "defa56b0",
+   "id": "240db385",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48f86336",
+   "id": "627120fd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -76,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc140412",
+   "id": "ca05bfd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5411859",
+   "id": "73182f43",
    "metadata": {},
    "outputs": [],
    "source": []
