Small bug in mainPage

--- a/vois/svgUtilsTest.ipynb
+++ b/vois/svgUtilsTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b8987c2",
+   "id": "e2022c64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0bfeca3",
+   "id": "1b0f1312",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2af01221",
+   "id": "6eaf80ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "748d46a4",
+   "id": "e342b6ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e48aa5ab",
+   "id": "32688665",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e75e3ca",
+   "id": "de9ea150",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,10 +131,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b3615de6",
+   "execution_count": 1,
+   "id": "2771b1f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2dd7fcb85eec4ff7bf1b3405771dd429",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "06ea558f0d0b457f90034b297cd5e776",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='calc(min(20vw, 35vh) + 14px)', width='min(20vw, 35vh)'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run svgUtils.py\n",
     "\n",
@@ -155,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d34d145",
+   "id": "92b35550",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7535ed06",
+   "id": "2abae384",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a4c7b30",
+   "id": "574fa09f",
    "metadata": {},
    "outputs": [],
    "source": []
