--- a/vois/vuetify/fabTest.ipynb
+++ b/vois/vuetify/fabTest.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3c7e31a5",
+   "execution_count": 7,
+   "id": "52ac9dfc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "073fa1d48d214862869766d8d79c63fc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import HTML, widgets, Layout\n",
     "from IPython.display import display\n",
@@ -26,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e3c1ae4",
+   "id": "e570696c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be05b39d",
+   "id": "96ffb923",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "697578b6",
+   "id": "597f72ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "addbaad7",
+   "id": "f0d0bf62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4604e0f",
+   "id": "fdaa41d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6747a220",
+   "id": "63307e91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,22 +108,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1687c0c5",
+   "execution_count": 8,
+   "id": "c0ff7638",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ICON\n",
     "%run fab.py\n",
     "   \n",
-    "b = fab(left='10px', top='10px', items=[''], onclick=[aaa], icon=['mdi-menu'], tooltipitems=['Click to open the settings panel'],\n",
+    "b = fab(left='300px', top='100px', items=[''], onclick=[aaa], icon=['mdi-menu'], tooltipitems=['Click to open the settings panel'],\n",
     "        iconsmall=False, menumode=False, width=100, selected=True, dark=True, zindex=100, output=debug)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75751659",
+   "id": "cce8ca5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d81918e7",
+   "id": "adb7c2a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,16 +143,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e8c0ff9a",
+   "execution_count": 10,
+   "id": "a4af9553",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Change position at runtime\n",
+    "b.top = '200px'\n",
+    "b.nav.style_ = \"left:%s; top:%s; z-index:%d;\" % (b.left,b.top,b.zindex)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b2650ba",
+   "id": "9c01db89",
    "metadata": {},
    "outputs": [],
    "source": []
