Added textlist widget

--- a/docs/3.2_referenceVuetify.rst
+++ b/docs/3.2_referenceVuetify.rst
@@ -342,6 +342,14 @@ tabs widget
 
 .. image:: figures/line.png
 
+textlist widget
+---------------
+
+.. automodule:: textlist
+    :members: 
+
+.. image:: figures/line.png
+
 title bar
 ---------
 
