--- a/vois/vuetify/toggleTest.ipynb
+++ b/vois/vuetify/toggleTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0c68f4b",
+   "id": "b318f9d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6409870",
+   "id": "438e978b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be47127c",
+   "id": "5bd4ebf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from vois.vuetify import toggle\n",
+    "from ipywidgets import widgets\n",
+    "from IPython.display import display\n",
+    "\n",
+    "output = widgets.Output()\n",
+    "\n",
+    "def onchange(index):\n",
+    "    with output:\n",
+    "        print(index)\n",
+    "\n",
+    "t = toggle.toggle(0, ['Option 1', 'Option 2', 'Option 3'], tooltips=['Tooltip for option 1'],\n",
+    "                  onchange=onchange, row=False, width=150, rounded=False)\n",
+    "\n",
+    "display(t.draw())\n",
+    "display(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f023acac",
    "metadata": {},
    "outputs": [],
    "source": []
