--- a/vois/vuetify/datatableTest.ipynb
+++ b/vois/vuetify/datatableTest.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "688a0465",
+   "execution_count": 1,
+   "id": "9275c7db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7246f491",
+   "execution_count": 2,
+   "id": "39027591",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,10 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a360e5f6",
+   "execution_count": 3,
+   "id": "5123702b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "56fc02bd37cc41a79b5e141a84b0c353",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "datatable(color='green', dark=True, events=['cell_click', 'onicon'], font_size='12px', font_size_title='18px',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run datatable.py\n",
     "\n",
@@ -48,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f05a539",
+   "id": "38718e08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,8 +72,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "id": "5042b6b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9b4e1b16390d4ba08642d39f75e549c7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "datatable(color='green', dark=True, events=['cell_click', 'onicon'], font_size='12px', font_size_title='18px',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%run datatable.py\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "df = pd.DataFrame(np.random.random((5,20)))\n",
+    "df.columns = ['C%d'%x for x in df.columns]\n",
+    "d = datatable(data=df, height='200px', color='green', dark=True,\n",
+    "              title='Randon numeric data', font_size='12px', font_size_title='18px', )\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7ad242ba",
+   "id": "5f2c4eec",
    "metadata": {},
    "outputs": [],
    "source": []
