--- a/vois/vuetify/textlistTest.ipynb
+++ b/vois/vuetify/textlistTest.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "04137bc3",
+   "execution_count": 1,
+   "id": "8517d8fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "96edaea2f066483b99d31b9b531b2d56",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Card(children=[Layout(children=[Col(children=[Html(children=['Name'], class_='pa-0 ma-0', layout=None, style_=…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run textlist.py\n",
     "\n",
@@ -34,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50da3d16",
+   "id": "454c515f",
    "metadata": {},
    "outputs": [],
    "source": []
