--- a/examples/notebooks/svgMap.ipynb
+++ b/examples/notebooks/svgMap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e3419fb4",
+   "id": "df0090d4",
    "metadata": {},
    "source": [
     "### Examples: svgMap module"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "956844df",
+   "id": "52cad445",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,7 @@
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "from vois import svgMap\n",
+    "from ipywidgets import HTML\n",
     "\n",
     "countries = svgMap.country_codes\n",
     "\n",
@@ -45,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc843965",
+   "id": "7f2605bf",
    "metadata": {},
    "outputs": [],
    "source": []
