--- a/src/vois/svgMapTest.ipynb
+++ b/src/vois/svgMapTest.ipynb
@@ -3,12 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd84e72b",
+   "id": "c6824ac2",
    "metadata": {},
    "outputs": [],
    "source": [
     "%run svgMap.py\n",
     "import random\n",
+    "from ipywidgets import HTML\n",
     "\n",
     "def rgb(r,g,b):\n",
     "    return '#{:02x}{:02x}{:02x}'.format(r,g,b)\n",
@@ -37,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30cafb37",
+   "id": "7a5036ff",
    "metadata": {},
    "outputs": [],
    "source": []
