Fixed help after src folder adding

--- a/examples/notebooks/vuetify/popup.ipynb
+++ b/examples/notebooks/vuetify/popup.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9956049",
+   "id": "3666a748",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18533fb5",
+   "id": "942cf96b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from vois.vuetify import popup, palettePickerEx\n",
+    "from ipywidgets import widgets\n",
+    "import ipyvuetify as v\n",
+    "\n",
+    "output = widgets.Output()\n",
+    "display(output)\n",
+    "\n",
+    "def onchange(colors,interpolate):\n",
+    "    pass\n",
+    "    #with output:\n",
+    "    #    print(colors,interpolate)\n",
+    "\n",
+    "pal = palettePickerEx.palettePickerEx(family='sequential', width=250, onchange=onchange)\n",
+    "pal.value = 'Turbo'\n",
+    "card = v.Card(flat=True, class_='pa-0 ma-0 mt-2 ml-2', children=[pal.draw()])\n",
+    "p = popup.popup(card, '', text=True, icon='mdi-palette-outline', outlined=False, buttonwidth=100, popupwidth=450, popupheight=120,\n",
+    "                open_on_hover=False, close_on_click=False, close_on_content_click=False)\n",
+    "\n",
+    "p.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "206b556d",
    "metadata": {},
    "outputs": [],
    "source": []
