Added titlecredits2 to app

--- a/src/vois/vuetify/appExample1.ipynb
+++ b/src/vois/vuetify/appExample1.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b815a67c",
+   "execution_count": 4,
+   "id": "ff60387f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3b1b58f586934735a526642eda3fb026",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dialog(children=[Card(children=[Output(layout=Layout(height='100vh', width='100vw'))], layout=None)], fullscre…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# FULLSCREEN EXAMPLE WITH BACKGROUND IMAGE AN RESPONSIVE PANELS\n",
     "import ipyvuetify as v\n",
@@ -17,7 +32,7 @@
     "from vois.vuetify import app, switch, datePicker\n",
     "from vois import svgHeatmap, svgBubblesChart\n",
     "\n",
-    "#%run app.py\n",
+    "%run app.py\n",
     "\n",
     "# Click on a tab of the title\n",
     "def on_click_tab(arg):\n",
@@ -26,6 +41,10 @@
     "# Click on the credits text\n",
     "def on_click_credits():\n",
     "    g_app.snackbar('CREDITS')\n",
+    "    \n",
+    "# Click on the BDAP text\n",
+    "def on_click_credits2():\n",
+    "    g_app.urlOpen('https://jeodpp.jrc.ec.europa.eu/bdap/')\n",
     "    \n",
     "# Click on the logo\n",
     "def on_click_logo():\n",
@@ -57,10 +76,11 @@
     "</svg>\n",
     "''' % (title, title)\n",
     "\n",
-    "g_app = app.app(title='',\n",
+    "g_app = app(title='',\n",
     "                titlesvg=titlesvg,\n",
     "                titleheight='6vh',\n",
-    "                titlecredits='Created by Unit I.3 - BDAP',\n",
+    "                titlecredits='Created by Unit I.3',\n",
+    "                titlecredits2='BDAP',\n",
     "                titlewidth='42vw',\n",
     "                titlestyle='color: black; font-weight: bold; font-size: 26px;',\n",
     "                titlespacestyle='width: 10vw;',\n",
@@ -86,6 +106,7 @@
     "                onclickminipanel=on_click_minipanel,\n",
     "                onclicktab=on_click_tab,\n",
     "                onclickcredits=on_click_credits,\n",
+    "                onclickcredits2=on_click_credits2,\n",
     "                onclicklogo=on_click_logo,\n",
     "                onclickfooter=on_click_footer,\n",
     "                fullscreen=True)\n",
@@ -189,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e403005",
+   "id": "bd7ef213",
    "metadata": {},
    "outputs": [],
    "source": []
