Added multi-page demo and docs

--- a/src/vois/vuetify/mainPageTest.ipynb
+++ b/src/vois/vuetify/mainPageTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "886f5d78",
+   "id": "a63119d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "\n",
     "from random import randrange\n",
     "\n",
-    "def onclick():\n",
+    "def onclick1():\n",
     "    print(\"Clicked Function 1\")\n",
     "    \n",
     "m = mainPage(title='mainPage demo',\n",
@@ -30,7 +30,7 @@
     "            #subtitle='Launch calculation of ...',\n",
     "            tooltip='Tooltip text to display on hover',\n",
     "            image='https://picsum.photos/seed/%d/200/200'%randrange(1000),\n",
-    "            onclick=onclick)\n",
+    "            onclick=onclick1)\n",
     "\n",
     "for i in range(2,7): m.addButton('Function %d'%i, image='https://picsum.photos/seed/%d/200/200'%randrange(1000))\n",
     "\n",
@@ -40,7 +40,66 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44acb21d",
+   "id": "79e92ea7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Basic multi-page app\n",
+    "from vois.vuetify import mainPage, page\n",
+    "from random import randrange\n",
+    "\n",
+    "from ipywidgets import widgets, Layout\n",
+    "\n",
+    "output = widgets.Output(layout=Layout(width='0px', height='0px'))\n",
+    "display(output)\n",
+    "\n",
+    "title     = 'MultiPage Demo'\n",
+    "logo      = 'https://jeodpp.jrc.ec.europa.eu/services/shared/pngs/BDAP_Logo1024transparent.png'\n",
+    "copyright = 'European Commission - Joint Research Centre'\n",
+    "\n",
+    "def randomPicture():\n",
+    "    return 'https://picsum.photos/seed/%d/200/200'%randrange(1000)\n",
+    "\n",
+    "def onclick1():\n",
+    "    p = page.page(title, 'Function 1', output, titlecolor='#808dc4', titledark=True, footercolor='#cccccc',\n",
+    "                  logoappurl=logo, copyrighttext=copyright)\n",
+    "    card = p.create()\n",
+    "    card.children = ['Put widgets into the empty space of the page1']\n",
+    "    p.open()    \n",
+    "\n",
+    "def onclick2():\n",
+    "    p = page.page(title, 'Function 2', output, titlecolor='#808dc4', titledark=True, footercolor='#cccccc',\n",
+    "                  logoappurl=logo, copyrighttext=copyright)\n",
+    "    card = p.create()\n",
+    "    card.children = ['Put widgets into the empty space of the page2']\n",
+    "    p.open()    \n",
+    "\n",
+    "m = mainPage.mainPage(title='MultiPage Demo',\n",
+    "                      subtitle='Showcase how easy is to create a multi-page app',\n",
+    "                      credits=\"vois library development team\",\n",
+    "                      titlebox_widthpercent=50, titlebox_opacity=0.2, titlebox_border=0,\n",
+    "                      vois_show=True, vois_opacity=0.1,\n",
+    "                      button_widthpercent=23, button_heightpercent=14, button_elevation=16, button_opacity=0.6,\n",
+    "                      background_image=55,\n",
+    "                      background_filter='blur(2px) brightness(1.2) contrast(0.7) sepia(0.05) saturate(1.2)',\n",
+    "                      creditbox_opacity=0,\n",
+    "                      text_color='#222222')\n",
+    "\n",
+    "m.addButton('Function 1', tooltip='Tooltip text to display on hover function1',\n",
+    "            image=randomPicture(), onclick=onclick1)\n",
+    "\n",
+    "m.addButton('Function 2', tooltip='Tooltip text to display on hover function2',\n",
+    "            image=randomPicture(), onclick=onclick2)\n",
+    "\n",
+    "for i in range(3,7): m.addButton('Function %d'%i, image=randomPicture())\n",
+    "\n",
+    "m.open()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25bef680",
    "metadata": {},
    "outputs": [],
    "source": []
